Fixed scrollbar appearing on page Also moved files around to be included in dist

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,6 @@
 @charset "utf-8";
 @import "bulma/bulma";
+html {
+    overflow-y: hidden;
+}
+    
